# tt_rust

./: .gitignore  1.input  Cargo.toml  README.md  agent.sqlite  config.nuc.yaml  config.yaml  dl-url  history.txt  out  tst.in  urls
defs/string/: format:  format_
doc/: dbx.md  design.docx  design.md  syntax.txt  todo.md
src/: code.rs  controls.rs  dbx.rs  doc.txt  lib.rs  main.rs  parser.rs  runtime.rs  tsort.rs
src/agent/: mod.rs  protocol.rs
src/agent/fs/: file.rs  memory.rs  mod.rs
src/data/: mod.rs
src/data/model/: mod.rs
src/dbx/: de.rs  ser.rs
src/dbx/de/: derow.rs  mod.rs
src/runtime/: arr.rs  blk.rs  boo.rs  chr.rs  fmt.rs  int.rs  nil.rs  pnt.rs  sel.rs  stm.rs  str.rs
src/ui/: de.rs  mod.rs
src/ui/glyph/: frame.rs  input.rs  label.rs  mod.rs  panel.rs
tests/: compile.rs  data.rs  dbx.rs  objects.rs  ui.rs
