[package]
name = "tt-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
santiago = "*"
odbc-api = "*"
# anyhow = "*"
csv = "*"
tokio = { version = "*", features=["full"] }
crossterm = { version = "*", features=["event-stream"] }
futures = "*"
futures-timer = "*"
chrono = "*"
rusqlite = { version = "0.29.0", features = ["bundled", "modern_sqlite"] }
serde = { version = "1.0"}
error = "0.1.9"
tracing = "0.1.37"
bytes = "1.5.0"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
uuid = { version = "1.5.0", features = ["v4"] }
once_cell = "1.18.0"
rustyline = { version = "12.0.0", features = ["derive"] }

[dev-dependencies]
serde_derive = "1.0"
