[package]
name = "tt-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
santiago = "*"
odbc-api = "*"
# anyhow = "*"
csv = "*"
tokio = { version = "*", features=["full"] }
crossterm = { version = "*", features=["event-stream"] }
futures = "*"
futures-timer = "*"
chrono = "*"
rusqlite = { version = "0.29.0", features = ["bundled", "modern_sqlite"] }
serde = { version = "1.0"}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.5.0", features = ["v4"] }
once_cell = "1.18.0"
rustyline = { version = "12.0.0", features = ["derive"] }
serde-xdr = { git = "https://github.com/hapejot/serde-xdr.git", version = "0.6.0" }
serde_derive = "1.0"
gethostname = "0.4.3"
sysinfo = "0.29.11"
futures-util = "0.3.29"
regex = "1.10.2"
serde_yaml = "0.9.27"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "cookies", "stream"] }
bytebuffer = "2.2.0"
sha3 = "0.10.8"
waiter_di = { version = "1.6.5", features = ["async"], git = "https://github.com/hapejot/waiter.git" }
config = { git = "https://github.com/hapejot/config-rs.git", version = "0.13.1" }
clap = { version = "4.4.11", features = ["derive"] }


[target.'cfg(unix)'.dependencies]
libc = "0.2.150"
fuser = "0.14.0"

[dev-dependencies]
serde_derive = "1.0"
